<resources>
    <string name="app_name">FirebaseAuth</string>
    <string name="main_activity_img_firebase_description">Icone do Firebase</string>
    <string name="main_activity_edittext_email_hint">Email</string>
    <string name="main_activity_button_signin">Entrar</string>
    <string name="main_activity_edittext_password_hint">Senha</string>
    <string name="main_activity_button_signup">Cadastrar</string>
    <string name="main_activity_button_clear">Limpar</string>
    <string name="sign_up_activity_first_name_hint">Nome</string>
    <string name="sign_up_activity_last_name_hint">Sobrenome</string>
    <string name="activity_home_welcome_textView">Bem-vindo!</string>
</resources>